--- a/css/style.css
+++ b/css/style.css
@@ -323,3 +323,18 @@ Media Quries
         margin-bottom: 25px;
     }
 }
+@media only screen and (max-width: 480px){
+    #form form .form-group input{
+        padding: 1em 5em;
+    }
+    #form .form-title h2 a {
+        font-size: 1.2em;
+        color: white;
+    }
+    footer .copyright h3 a {
+        color: white;
+        font-size: 1em;
+        font-weight: 500;
+        margin-right: 15px;
+    }
+}
