--- a/css/contact/custom-style.css
+++ b/css/contact/custom-style.css
@@ -43,12 +43,14 @@ body{
     padding: 1em 4em;
     border: none;
     color: white;
+    text-align: center;
     border-radius: 5px;
     background-color: rgba(0,0,0,0.7);
 }
 #form form .form-group textarea{
     border: none;
     color: white;
+    text-align: center;
     width: 80%;
     height: 50%;
     border-radius: 5px;
