--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,7 @@ nav.nav-bottom ul li a:hover{
     padding: 1em 20em;
     border-radius: 5px;
     color: white;
+    text-align: center;
     border: none;
     background-color: rgba(0,0,0,0.7);
 }
