--- a/css/info/custom-style.css
+++ b/css/info/custom-style.css
@@ -6,8 +6,13 @@
 
 }
 body{
-    background:url("../../img/info.png") no-repeat fixed ;
+    background:url("../../img/info.png") no-repeat center center fixed ;
     background-size: cover;
+
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+
     height: 90vh;
     z-index: 1;
 }
