--- a/css/info/cities.css
+++ b/css/info/cities.css
@@ -6,11 +6,12 @@
 
 }
 body{
-    background:url("../../img/hotel-guest.png") no-repeat center center fixed;
+    background:url("../../img/cities-bg.png") no-repeat center center fixed;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
+
     height: 50vh;
     z-index: 1;
 }
@@ -23,6 +24,7 @@ Sections
 #sections-hotel{
     padding: 50px 10px 0;
     text-align: left;
+    margin-left: 180px;
 }
 #sections-hotel .section-title h2 a{
     font-size: 1.8em;
@@ -37,7 +39,7 @@ Sections
 }
 #sections-hotel .section-back{
 
-    width: 60%;
+    width: 100%;
     margin-bottom: 30px;
     text-align: left;
 
@@ -53,6 +55,7 @@ Sections
     background-color: rgba(0,0,0,0.7);
 }
 #sections-hotel .hotel-info{
+    width: 100%;
     margin-right: 200px;
     margin-top: 20px;
 }
@@ -60,6 +63,19 @@ Sections
     margin-top: 5px;
     font-size: 1.5em;
     color: white;
+    margin-bottom: 15px;
+}
+#sections-hotel .hotel-info h3 a{
+    color: white;
+    font-weight: 600;
+    font-size: 30px;
+}
+#sections-hotel .hotel-info p{
+    width: 80%;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+    line-height:30px;
 }
 #sections-hotel .hotel-info h3 span{
     color: #bada55;
@@ -80,24 +96,32 @@ table {
 }
 th, td {
     text-align: left;
-    padding: 10px;
+
 }
 tr:nth-child(even){background-color: #cecece}
 tr:nth-child(odd){background-color: #dcdcdc}
 tr:nth-child(1){
-    background: #2a2a22;
+    background: rgba(0,0,0,0.6);
     color: white;
     border-bottom: 4px solid #fff;
 }
 tr th{
     border-right: 4px solid #fff;
     text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    border-top: 1px solid #fff;
 }
 tr th:last-child{
     border-right: none;
 }
 tr td{
     border-right: 3px solid #fff;
+    border-bottom: 2px solid #ffffff;
+    text-align: center;
+    color: rgba(0,0,0,1);
+    font-size: 22px;
+
 }
 tr td:last-child{
     border-right: none;
@@ -111,6 +135,9 @@ Media Query for Info
 ================
 */
 @media only screen and (max-width: 760px){
+    #sections-hotel{
+        margin-left: 0;
+    }
     #sections-hotel .section-title{
         text-align: center;
         margin-left: 0;
@@ -123,6 +150,9 @@ Media Query for Info
     }
 }
 @media only screen and (max-width: 480px){
+    #sections-hotel{
+        margin-left: 0;
+    }
     #sections-hotel .section-title{
         text-align: center;
         margin-left: 0;
