--- a/css/info/hotel-room.css
+++ b/css/info/hotel-room.css
@@ -6,11 +6,12 @@
 
 }
 body{
-    background:url("../../img/hotel-guest.png") no-repeat center center fixed;
+    background:url("../../img/hotel-room.png") no-repeat center center fixed;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
+
     height: 50vh;
     z-index: 1;
 }
@@ -53,13 +54,20 @@ Sections
     background-color: rgba(0,0,0,0.7);
 }
 #sections-hotel .hotel-info{
-    margin-right: 200px;
+    width: 100%;
+    margin-left: 200px;
     margin-top: 20px;
 }
 #sections-hotel .hotel-info h3{
     margin-top: 5px;
     font-size: 1.5em;
     color: white;
+    margin-bottom: 15px;
+}
+#sections-hotel .hotel-info h3 a{
+    color: white;
+    font-weight: 600;
+    font-size: 30px;
 }
 #sections-hotel .hotel-info h3 span{
     color: #bada55;
@@ -98,6 +106,8 @@ tr th:last-child{
 }
 tr td{
     border-right: 3px solid #fff;
+    font-size: 15px;
+    font-weight: bold;
 }
 tr td:last-child{
     border-right: none;
@@ -121,6 +131,40 @@ Media Query for Info
         margin-right: 0;
         text-align: center;
     }
+    #sections-hotel .hotel-info{
+        width: 100%;
+        margin-left: 0px;
+        margin-top: 20px;
+    }
+}
+
+/*
+Select Options
+*/
+.options{
+    width: 100%;
+    text-align: center;
+}
+.options select{
+    width: inherit;
+    margin-bottom: 30px;
+    text-align: center;
+    padding: 12px;
+    color: white;
+    background: #b0b1a6;
+    border: none;
+    font-size: 18px;
+    text-indent: 35%;
+
+}
+.options select:focus{
+    background-color: white;
+    color: black;
+}
+.options select option{
+    margin-bottom: 20px;
+    font-size: 15px;
+    text-align: center;
 }
 @media only screen and (max-width: 480px){
     #sections-hotel .section-title{
@@ -137,5 +181,10 @@ Media Query for Info
         width: 60%;
         margin-bottom: 30px;
         text-align: center;
+    }
+    #sections-hotel .hotel-info{
+        width: 100%;
+        margin-left: 0px;
+        margin-top: 20px;
     }
 }
