--- a/css/info/register-new-guest.css
+++ b/css/info/register-new-guest.css
@@ -17,16 +17,17 @@ body{
 }
 #form .submit{
     text-align: center;
-    margin-top: 20px;
-    padding: 12px 24px;
+    margin-top: 19px;
+    padding: 25px 80px;
     background-color: rgba(0,0,0,0.7);
     color: white;
-    font-size: 30px;
-    border: none;
+    font-size: 20px;
+    border: 1px solid black;
     border-radius: 10px;
     transition: background-color 1s;
+    text-decoration: none;
 }
 #form form .form-group {
     margin-top: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 }
