--- a/css/style.css
+++ b/css/style.css
@@ -223,6 +223,33 @@ nav.nav-bottom ul li a:hover{
     border: none;
     background-color: rgba(0,0,0,0.7);
 }
+#form form .form-group [type="email"]:-moz-placeholder{
+    font-weight: 500;
+    font-size: 1em;
+    color: white;
+
+}
+#form form .form-group [type="email"]::-moz-placeholder{
+    font-weight: 500;
+    font-size: 1em;
+    color: white;
+
+}
+#form form .form-group [type="email"]::-webkit-input-placeholder{
+    font-weight: 500;
+    font-size: 1em;
+    color: white;
+
+}
+#form form .form-group [type="email"]:-ms-input-placeholder{
+    font-weight: 500;
+    font-size: 1em;
+    color: white;
+}
+
+
+
+
 #form form .form-group [type="password"]:-moz-placeholder{
     font-weight: 500;
     font-size: 1em;
