we added full pages and turn to menu to modify it with menu

--- a/css/info/withdraw-profits.css
+++ b/css/info/withdraw-profits.css
@@ -62,6 +62,9 @@ tr th{
 .gold-info li a span{
     color: green;
 }
+.img-gold img{
+    width: 130px;
+}
 /*
 ================
 Media Query for Info
