--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,9 @@ body{
  Nav
 ================
 */
+#nav-mobile{
+    display: none;
+}
 #nav{
     padding: 40px 0;
     background-color: rgba(255,255,255,0.6);
@@ -82,7 +85,8 @@ body{
 
 #nav .second-logo img{
     display: block;
-    text-align: center;
+    text-align: -webkit-center;
+    margin: 0 auto;
 }
 #nav .text-second-logo h2 span{
     display: block;
@@ -132,10 +136,11 @@ body{
     font-weight: 500;
     font-size: 1.2em;
     text-decoration: none;
-    transition: color 1s ease-in;
+    transition: background-color 1s ease-in;
 }
 #nav .addational-register a:hover{
-    color: #a0138e;
+
+    background-color: rgba(0,0,0,0.7);
 }
 #nav .addational-register .language{
     text-align: center;
@@ -157,7 +162,7 @@ body{
     text-align: center;
 }
 #nav .addational-register .sign a{
-    padding: 0.5em 4.4em;
+    padding: 10px 80px;
 
 }
 
@@ -223,6 +228,10 @@ nav.nav-bottom ul li a:hover{
     text-align: center;
     border: none;
     background-color: rgba(0,0,0,0.7);
+}
+#form form .form-group input:hover{
+    background-color: rgba(211,211,211,0.7);
+    border: 1px solid rgba(0,0,0,0.8) ;
 }
 #form form .form-group [type="email"]:-moz-placeholder{
     font-weight: 500;
@@ -304,19 +313,21 @@ nav.nav-bottom ul li a:hover{
 #form .submit{
     text-align: center;
     margin-top: 20px;
-    padding: 32px 64px;
+    padding: 25px 90px;
     background-color: rgba(0,0,0,0.7);
     color: white;
     font-size: 25px;
     border: none;
     border-radius: 10px;
-    transition: background-color 1s;
+    transition: background-color 0.3s;
     text-decoration: none;
+    font-weight: 700;
 }
 #form .submit:hover{
-    background-color: rgba(0,0,0,0.9);
-    font-weight: 700;
-    transform: scale(0.8);
+    background-color: rgba(211,211,211,0.8);
+    border: 0.5px solid rgba(0,0,0,0.7);
+    color: white;
+
 }
 /*
 ======================
@@ -344,18 +355,14 @@ footer .copyright h3 a{
 Mobile Menu
 ====================
 */
-.menu-mobile{
-    position: relative;
-    right: 0;
-    top: 0;
-}
-.menu-mobile .icon-span{
-  display: none;
-}
+
+
 .menu-mobile .nav-bottom{
     display: none;
 }
-
+.nav-bottom-mobile{
+    display: none;
+}
 /*
 ===================
 
@@ -363,6 +370,9 @@ Media Quries
 ===================
 */
 @media only screen and (max-width: 760px){
+    #nav{
+        display: none;
+    }
     #wix .intro {
         display: flex;
         justify-content: center;
@@ -371,50 +381,195 @@ Media Quries
     #wix .intro a{
         margin-left: 0;
     }
+
+    #nav{
+        display: none;
+    }
+    #nav-mobile{
+        display: block;
+    }
+    /*nav Mobile*/
+
+    #nav-mobile{
+        padding: 40px 0;
+        background-color: rgba(255,255,255,0.6);
+        transition: background-color 1s;
+
+    }
+    #nav-mobile .nav-top{
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        justify-content: space-evenly;
+        margin-top: 30px;
+        position: relative;
+        top:0;
+        left:0;}
+
+    #nav-mobile .second-logo img{
+        display: block;
+        text-align: -webkit-center;
+        margin: 0 auto;
+        width: 60px;
+    }
+
+    #nav-mobile .text-second-logo h2 span{
+
+        font-size: 1.1em;
+        text-align: center;
+        font-weight: 700;
+        margin: 0 auto;
+        margin-top: 5px;
+        font-style: italic;
+    }
+    #nav-mobile .text-second-logo p{
+        margin-top: 30px;
+        font-size: 15px;
+        font-weight: 500;
+    }
+    #nav-mobile .addational-register .btn{
+        margin-bottom: 40px;
+    }
+    #nav-mobile .addational-register a{
+        margin-top: 20px;
+        padding: 10px 30px;
+        border-radius: 5px;
+        background-color: rgba(0,0,0,0.4);
+        color: white;
+        font-weight: 500;
+        font-size: 1.2em;
+        text-decoration: none;
+        transition: color 1s ease-in;
+    }
+    #nav-mobile .addational-register select{
+        margin-top: 20px;
+        padding: 5px 10px;
+        border-radius: 5px;
+        background-color: rgba(0,0,0,0.4);
+        color: white;
+        font-weight: 500;
+        font-size: 1.2em;
+        text-decoration: none;
+        transition: color 1s ease-in;
+    }
+    #nav-mobile .addational-register select option{
+        margin-top: 20px;
+        margin-bottom: 20px;
+        padding: 5px 10px;
+        border-radius: 5px;
+        background-color: rgba(0,0,0,0.4);
+        color: white;
+        font-weight: 500;
+        font-size: 1.2em;
+        text-decoration: none;
+        transition: background-color 1s ease-in;
+    }
+    #nav-mobile .addational-register a:hover{
+
+        background-color: rgba(0,0,0,0.7);
+    }
+    #nav-mobile .addational-register .language{
+        text-align: center;
+    }
+
+    /*
+        padding: 10px 30px;
+        border-radius: 0;
+    */
+    #nav-mobile .addational-register #language-switcher li{
+        margin-bottom: 18px;
+        list-style: none;
+
+    }
+    #nav-mobile .addational-register #language-switcher img{
+        margin-right: 10px;
+    }
+    #nav-mobile .addational-register .sign {
+        text-align: center;
+    }
+    #nav-mobile .addational-register .sign a{
+        padding: 10px 80px;
+
+    }
+
+    #nav-mobile .nav-bottom-mobile{
+        width: 50%;
+        margin: 0 auto;
+        margin-top: 40px;
+    }
+    #nav-mobile .nav-bottom-mobile ul{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        width: 100%;
+        border-bottom: 1px solid #000;
+        padding-bottom: 15px;
+    }
+    #nav-mobile .nav-bottom-mobile ul li{
+        list-style: none;
+
+    }
+
+    #nav-mobile .nav-bottom-mobile ul li a{
+        text-decoration: none;
+        font-size: 1.1em;
+        color: black;
+        font-weight: 600;
+        padding-top: 15px;
+        border-top: none;
+    }
+    #nav-mobile .nav-bottom-mobile ul li a:hover{
+        border-top: 2px solid gray;
+    }
     /* Nav Query*/
-     .nav-top .logo{
+    #nav-mobile .nav-top .logo{
          width: 100%;
          -ms-flex: 100%;
          flex: 100%;
          text-align: center;
          margin-bottom: 15px;
      }
-    .nav-top .second-logo{
-        width: 100%;
-        -ms-flex: 100%;
-        flex: 100%;
-        text-align: center;
-        margin-bottom: 15px;
+    #nav-mobile .nav-top .second-logo{
+
+        display: flex;
+        margin-right: 140px;
+        margin-bottom: -30px;
 
     }
-    #nav .second-logo img{
+    #nav-mobile.second-logo img{
         display: unset;
     }
-    .nav-top .text-second-logo{
+    #nav-mobile  .nav-top .text-second-logo{
         width: 100%;
         -ms-flex: 100%;
         flex: 100%;
         text-align: center;
+
     }
-    nav.nav-bottom ul {
+    #nav-mobile .nav-bottom-mobile ul {
 
         text-align: center;
 
     }
-    nav.nav-bottom ul li {
+    #nav-mobile .nav-bottom-mobile ul li {
         list-style: none;
         display: block;
         width: 100%;
         margin-top: 25px;
     }
+
     /* Form query*/
     #form .form-title {
         display: flex;
         flex-wrap: wrap;
         font-size: 1.2em;
         justify-content: center;
-        margin-bottom: 50px;
+        margin-bottom: 10px;
         margin-left: 0;
+    }
+    #form .form-title h2 a {
+        font-size: 1.5em;
+        color: white;
     }
     #form form .form-group input{
         padding: 1em 10em;
@@ -440,33 +595,48 @@ Media Quries
         top: -40px;
         z-index: 100;
     }
-    nav.nav-bottom ul li{
+    #nav-mobile .nav-bottom-mobile ul li{
         margin-bottom: 30px;
         transition: background-color 1s;
     }
-    nav.nav-bottom ul li:hover{
+    #nav-mobile .nav-bottom-mobile ul li:hover{
         padding: 10px;
         background-color: rgba(0,0,0,0.4);
     }
-    .menu-mobile .icon-span{
+    #nav-mobile .nav-top .icon-span{
         position: absolute;
-        top: -480px;
-        right: 25px;
+        top: -10px;
+        right: 34px;
         /* width: 60px; */
         background-color: rgba(0,0,0,0.2);
-        padding: 15px 15px;
+        padding: 25px 0px;
         border-radius: 10px;
 
         cursor: pointer;
         display: block;
     }
-    .nav-bottom{
+    #nav-mobile .nav-bottom{
         display: none;
     }
-
+    .mobile-logo{
+        text-align: center;
+        margin: 0 auto;
     }
-
+    .mobile-logo img{
+        display: block;
+        width: 90%;
+        margin: 0 auto;
+    }
+      .quote-text p{
+          font-style: italic;
+          font-size: 16px;
+          font-weight: 700;
+      }
+    }
 @media only screen and (max-width: 480px){
+    #nav{
+        display: none;
+    }
     #form form .form-group input{
         padding: 1em 5em;
     }
@@ -481,50 +651,31 @@ Media Quries
         font-weight: 500;
         margin-right: 15px;
     }
-    .menu-mobile .icon-span{
+    #nav-mobile .menu-mobile .icon-span{
         position: absolute;
-        top: -480px;
+        top: 0px;
         right: 25px;
         /* width: 60px; */
         background-color: rgba(0,0,0,0.2);
-        padding: 15px 15px;
+        padding: 35px 0px;
         border-radius: 10px;
         cursor: pointer;
         display: block;
     }
-    nav{
-        position: fixed;
-        background-color: white;
-        width: 70%;
-        left: 0;
-        height: 100%;
-        top: -40px;
-        z-index: 100;
-    }
-    nav.nav-bottom ul li{
-        margin-bottom: 30px;
-        transition: background-color 1s;
-    }
-    nav.nav-bottom ul li:hover{
-        padding: 10px;
-        background-color: rgba(0,0,0,0.4);
-    }
-    .nav-bottom{
-        display: none;
-    }
-    #nav .second-logo img{
-        display: unset;
-    }
+
 
 }
 @media only screen and (max-width: 320px){
+    #nav{
+        display: none;
+    }
 footer .copyright h3 a {
     color: white;
     font-size: 12px;
     font-weight: 500;
     margin-right: 15px;
 }
-    nav{
+    #nav-mobile{
         position: fixed;
         background-color: white;
         width: 70%;
@@ -533,21 +684,21 @@ footer .copyright h3 a {
         top: -40px;
         z-index: 100;
     }
-    nav.nav-bottom ul li{
+    #nav-mobile .nav-bottom-mobile ul li{
         margin-bottom: 30px;
         transition: background-color 1s;
     }
-    nav.nav-bottom ul li:hover{
+    #nav-mobile .nav-bottom-mobile ul li:hover{
         padding: 10px;
         background-color: rgba(0,0,0,0.4);
     }
-    .nav-bottom{
+    #nav-mobile .nav-bottom-mobile{
         display: none;
     }
 
-    .menu-mobile .icon-span{
+    #nav-mobile .menu-mobile .icon-span{
         position: absolute;
-        top: -480px;
+        top: -300px;
         right: 25px;
         /* width: 60px; */
         background-color: rgba(0,0,0,0.2);
@@ -556,7 +707,7 @@ footer .copyright h3 a {
         cursor: pointer;
         display: block;
     }
-    #nav .second-logo img{
+     #nav-mobile .second-logo img{
         display: unset;
     }
 }
@@ -565,13 +716,19 @@ footer .copyright h3 a {
     margin-top: 50px;
 }
 /*labguage swticher*/
-
+.switch-lang img{
+    width: 20% !important;
+    display: inline !important;
+}
 .switch-lang {
     width: 110px;
      z-index: 300;
     margin: 0 auto;
-    margin-bottom: 40px;
+    margin-top: 30px;
+    margin-bottom: 50px;
     text-align: center;
+}
+.switch-lang p{margin-top: 0px !important;
 }
 .switch-lang:hover .lang-dropdown {
     display: block;
@@ -584,8 +741,8 @@ footer .copyright h3 a {
 }
 .current-lang {
     background: rgba(0,0,0,0.4);
-    padding: 3px 5px 0px 5px;
-    border-radius: 5px;
+    padding: 8px 16px;
+    border-radius: 10px;
 }
 .lang-flag {
     width: 20px;
@@ -629,4 +786,33 @@ footer .copyright h3 a {
 }
 .switch-lang p{
     color: white;
+}
+/*
+    #nav-mobile{
+        position: fixed;
+        background-color: white;
+        width: 70%;
+        left: 0;
+        height: 100%;
+        top: -40px;
+        z-index: 100;
+    }
+    #nav-mobile .nav-bottom ul li{
+        margin-bottom: 30px;
+        transition: background-color 1s;
+    }
+    #nav-mobile .nav-bottom ul li:hover{
+        padding: 10px;
+        background-color: rgba(0,0,0,0.4);
+    }
+    #nav-mobile   .nav-bottom{
+        display: none;
+    }
+    #nav-mobile .second-logo img{
+        display: unset;
+    }
+*/
+.activee{
+    display: block;
+    margin-top: 50px;
 }
