--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ body{
 }
 #nav{
     padding: 40px 0;
-    background-color: rgba(255,255,255,0.6);
+    background-color: rgba(255,255,255,0.5);
     transition: background-color 1s;
 
 }
@@ -108,7 +108,7 @@ body{
     margin-top: 20px;
     padding: 10px 30px;
     border-radius: 5px;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0,0,0,0.5);
     color: white;
     font-weight: 500;
     font-size: 1.2em;
@@ -119,7 +119,7 @@ body{
     margin-top: 20px;
     padding: 5px 10px;
     border-radius: 5px;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0,0,0,0.5);
     color: white;
     font-weight: 500;
     font-size: 1.2em;
@@ -131,7 +131,7 @@ body{
     margin-bottom: 20px;
     padding: 5px 10px;
     border-radius: 5px;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0,0,0,0.5);
     color: white;
     font-weight: 500;
     font-size: 1.2em;
@@ -140,7 +140,7 @@ body{
 }
 #nav .addational-register a:hover{
 
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(0,0,0,0.5);
 }
 #nav .addational-register .language{
     text-align: center;
@@ -227,11 +227,11 @@ nav.nav-bottom ul li a:hover{
     color: white;
     text-align: center;
     border: none;
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(0,0,0,0.5);
 }
 #form form .form-group input:hover{
-    background-color: rgba(211,211,211,0.7);
-    border: 1px solid rgba(0,0,0,0.8) ;
+    background-color: rgba(211,211,211,0.5);
+    border: 1px solid rgba(0,0,0,0.5) ;
 }
 #form form .form-group [type="email"]:-moz-placeholder{
     font-weight: 500;
@@ -314,7 +314,7 @@ nav.nav-bottom ul li a:hover{
     text-align: center;
     margin-top: 20px;
     padding: 25px 90px;
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(0,0,0,0.5);
     color: white;
     font-size: 25px;
     border: none;
@@ -324,8 +324,8 @@ nav.nav-bottom ul li a:hover{
     font-weight: 700;
 }
 #form .submit:hover{
-    background-color: rgba(211,211,211,0.8);
-    border: 0.5px solid rgba(0,0,0,0.7);
+    background-color: rgba(211,211,211,0.5);
+    border: 1px solid rgba(0,0,0,0.5);
     color: white;
 
 }
@@ -392,7 +392,7 @@ Media Quries
 
     #nav-mobile{
         padding: 40px 0;
-        background-color: rgba(255,255,255,0.6);
+        background-color: rgba(255,255,255,0.5);
         transition: background-color 1s;
 
     }
@@ -434,7 +434,7 @@ Media Quries
         margin-top: 20px;
         padding: 10px 30px;
         border-radius: 5px;
-        background-color: rgba(0,0,0,0.4);
+        background-color: rgba(0,0,0,0.5);
         color: white;
         font-weight: 500;
         font-size: 1.2em;
@@ -445,7 +445,7 @@ Media Quries
         margin-top: 20px;
         padding: 5px 10px;
         border-radius: 5px;
-        background-color: rgba(0,0,0,0.4);
+        background-color: rgba(0,0,0,0.5);
         color: white;
         font-weight: 500;
         font-size: 1.2em;
@@ -457,7 +457,7 @@ Media Quries
         margin-bottom: 20px;
         padding: 5px 10px;
         border-radius: 5px;
-        background-color: rgba(0,0,0,0.4);
+        background-color: rgba(0,0,0,0.5);
         color: white;
         font-weight: 500;
         font-size: 1.2em;
@@ -466,7 +466,7 @@ Media Quries
     }
     #nav-mobile .addational-register a:hover{
 
-        background-color: rgba(0,0,0,0.7);
+        background-color: rgba(0,0,0,0.5);
     }
     #nav-mobile .addational-register .language{
         text-align: center;
@@ -601,19 +601,24 @@ Media Quries
     }
     #nav-mobile .nav-bottom-mobile ul li:hover{
         padding: 10px;
-        background-color: rgba(0,0,0,0.4);
+        background-color: rgba(0,0,0,0.5);
     }
     #nav-mobile .nav-top .icon-span{
         position: absolute;
         top: -10px;
         right: 34px;
         /* width: 60px; */
-        background-color: rgba(0,0,0,0.2);
-        padding: 25px 0px;
+        background-color: rgba(0,0,0,0.5);
+        padding: 30px 18px;
         border-radius: 10px;
 
         cursor: pointer;
         display: block;
+
+    }
+    #nav-mobile .nav-top .icon-span i{
+        font-size: 20px;
+        color: white;
     }
     #nav-mobile .nav-bottom{
         display: none;
@@ -656,7 +661,7 @@ Media Quries
         top: 0px;
         right: 25px;
         /* width: 60px; */
-        background-color: rgba(0,0,0,0.2);
+        background-color: rgba(0,0,0,0.5);
         padding: 35px 0px;
         border-radius: 10px;
         cursor: pointer;
@@ -690,7 +695,7 @@ footer .copyright h3 a {
     }
     #nav-mobile .nav-bottom-mobile ul li:hover{
         padding: 10px;
-        background-color: rgba(0,0,0,0.4);
+        background-color: rgba(0,0,0,0.5);
     }
     #nav-mobile .nav-bottom-mobile{
         display: none;
@@ -701,12 +706,13 @@ footer .copyright h3 a {
         top: -300px;
         right: 25px;
         /* width: 60px; */
-        background-color: rgba(0,0,0,0.2);
+        background-color: rgba(0,0,0,0.5);
         padding: 15px 15px;
         border-radius: 10px;
         cursor: pointer;
         display: block;
     }
+
      #nav-mobile .second-logo img{
         display: unset;
     }
@@ -740,7 +746,7 @@ footer .copyright h3 a {
     color: #fff;
 }
 .current-lang {
-    background: rgba(0,0,0,0.4);
+    background: rgba(0,0,0,0.5);
     padding: 8px 16px;
     border-radius: 10px;
 }
@@ -756,7 +762,7 @@ footer .copyright h3 a {
 }
 .lang-dropdown {
     display: none;
-    background: rgba(0,0,0,0.7);
+    background: rgba(0,0,0,0.5);
     border-radius: 5px;
     margin-top: 2px;
 }
@@ -765,7 +771,7 @@ footer .copyright h3 a {
     cursor: pointer;
 }
 .selecting-lang:hover {
-    background: rgba(0,0,0,0.7);
+    background: rgba(0,0,0,0.5);
 }
 
 .switch-lang ul > :first-child {
