--- a/css/info/forget-pass.css
+++ b/css/info/forget-pass.css
@@ -94,7 +94,7 @@ th, td {
 tr:nth-child(even){background-color: #cecece}
 tr:nth-child(odd){background-color: #dcdcdc}
 tr:nth-child(1){
-    background: #2a2a22;
+    background:   rgba(0,0,0,0.5);
     color: white;
     border-bottom: 4px solid #fff;
 }
