edit menu to show cancel icon

--- a/css/info/register-new-guest2.css
+++ b/css/info/register-new-guest2.css
@@ -90,7 +90,11 @@ Select Options
     color: white;
 }
 
+.checkbox a {
+    color: white;
+    font-size: inherit;
 
+}
 #form form .checkbox-confirm{
     display: flex;
     justify-content: flex-start;
