--- a/css/info/cities.css
+++ b/css/info/cities.css
@@ -47,12 +47,19 @@ Sections
 #sections-hotel .section-back a {
     width: 100%;
     text-align: center;
-    padding: 8px 16px;
+    padding: 12px 16px;
+    border-radius: 10px;
+    text-decoration: none;
     color: white;
     font-size: 12px;
     font-weight: 700;
-    border-radius: 4px;
+
     background-color: rgba(0,0,0,0.5);
+}
+
+#sections-hotel .section-back a:hover{
+    background-color: rgba(211,211,211,0.5);
+    border: 1px solid black;
 }
 #sections-hotel .hotel-info{
     width: 100%;
@@ -119,7 +126,7 @@ tr td{
     border-right: 3px solid #fff;
     border-bottom: 2px solid #ffffff;
     text-align: center;
-    color: rgba(0,0,0,0.5);
+    color: rgba(0,0,0,0.9);
     font-size: 22px;
 
 }
