--- a/css/info/custom-style.css
+++ b/css/info/custom-style.css
@@ -49,11 +49,13 @@ Sections
 
     width: 100%;
     text-align: center;
-    padding: 8px 16px;
+    padding: 12px 16px;
+    border-radius: 10px;
+    text-decoration: none;
     color: white;
     font-size: 12px;
     font-weight: 700;
-    border-radius: 4px;
+
     background-color: rgba(0,0,0,0.5);
 
 }
