--- a/css/info/forget-pass.css
+++ b/css/info/forget-pass.css
@@ -47,12 +47,19 @@ Sections
 #sections-hotel .section-back a {
     width: 100%;
     text-align: center;
-    padding: 8px 16px;
+    padding: 12px 16px;
+    border-radius: 10px;
+    text-decoration: none;
     color: white;
     font-size: 12px;
     font-weight: 700;
-    border-radius: 4px;
+
     background-color: rgba(0,0,0,0.5);
+    transition: background-color 0.3s;
+}
+#sections-hotel .section-back a:hover{
+    background-color: rgba(211,211,211,0.5);
+    border: 1px solid black;
 }
 #sections-hotel .hotel-info{
     width: 100%;
