--- a/css/info/hotel-guest.css
+++ b/css/info/hotel-guest.css
@@ -45,12 +45,18 @@ Sections
 #sections-hotel .section-back a {
     width: 100%;
     text-align: center;
-    padding: 8px 16px;
+    padding: 12px 16px;
+    border-radius: 10px;
+    text-decoration: none;
     color: white;
     font-size: 12px;
     font-weight: 700;
-    border-radius: 4px;
+
     background-color: rgba(0,0,0,0.5);
+}
+#sections-hotel .section-back a:hover{
+    background-color: rgba(211,211,211,0.5);
+    border: 1px solid black;
 }
 #sections-hotel .hotel-info{
     margin-right: 200px;
