--- a/css/info/hotel-room.css
+++ b/css/info/hotel-room.css
@@ -47,11 +47,13 @@ Sections
 #sections-hotel .section-back a {
     width: 100%;
     text-align: center;
-    padding: 8px 16px;
+    padding: 12px 16px;
+    border-radius: 10px;
+    text-decoration: none;
     color: white;
     font-size: 12px;
     font-weight: 700;
-    border-radius: 4px;
+
     background-color: rgba(0,0,0,0.5);
 }
 #sections-hotel .hotel-info{
