--- a/css/info/hotel-room.css
+++ b/css/info/hotel-room.css
@@ -39,7 +39,7 @@ Sections
 }
 #sections-hotel .section-back{
 
-    width: 60%;
+    width: 72%;
     margin-bottom: 30px;
     text-align: left;
 
@@ -58,7 +58,7 @@ Sections
 }
 #sections-hotel .hotel-info{
     width: 100%;
-    margin-left: 200px;
+    margin-left: 188px;
     margin-top: 20px;
 }
 #sections-hotel .hotel-info h3{
@@ -95,20 +95,21 @@ th, td {
 }
 tr:nth-child(even){background-color: rgba(206,206,206,0.5)}
 tr:nth-child(odd){background-color:  rgba(220,220,220,0.5)}
-tr:nth-child(1){
+tr{
     background: rgba(0,0,0,0.5);
     color: white;
-    border-bottom: 4px solid #fff;
+    border-bottom: 1px solid #fff;
 }
 tr th{
-    border-right: 4px solid #fff;
+    border-right: 1px solid #fff;
     text-align: center;
+    background-color: rgba(0,0,0,0.5);
 }
 tr th:last-child{
     border-right: none;
 }
 tr td{
-    border-right: 3px solid #fff;
+    border-right: 1px solid #fff;
     font-size: 15px;
     font-weight: bold;
 }
@@ -116,7 +117,7 @@ tr td:last-child{
     border-right: none;
 }
 tr:last-child{
-    border-bottom: 3px solid #fff;
+    border-bottom: 1px solid #fff;
 }
 
 
@@ -126,6 +127,7 @@ Select Options
 .options{
     width: 100%;
     text-align: center;
+    margin-bottom: 20px;
 }
 .options select{
     width: inherit;
